@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Helper stringbuffer function.
+ common/stringbuffer.c
+ include/stringbuffer.h
+Nicolas Weeger, 2008-02-09
+
 Get quest information from map's lore. Generate quest index.
  utils/mapper.c
  utils/templates/map.template
